--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,8 @@
     {% block stylesheets %}
         {% stylesheets '@bootstrap_less' combine=true  output='css/compiled/main.css' %}
         <link href="{{ asset_url }}" type="text/css" rel="stylesheet"/>{% endstylesheets %}
+        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link type="text/css" rel="stylesheet" href="{{ asset('bundles/app/css/local.css') }}">
     {% endblock %}
 
@@ -42,11 +44,11 @@
                     <a href="#main_content">Skip Navigation</a>
                 </li>
                 <li><a title="Courses" href="{{ path('theme') }}">Getting Started</a></li>
-                <li><a title="Courses" href="{{ path('file') }}">Resources</a></li>
-                <li><a  href="{{ path('objective') }}"> Objectives</a></li>
                 <li><a  href="{{ path('module') }}"> Modules</a></li>
-                <li><a  href="{{ path('mapset') }}"> Maps</a></li>
+                <li><a  href="{{ path('objective') }}"> Objectives</a></li>
                 <li><a href="{{ path('activity') }}"> Activities</a></li>
+                <li><a title="Courses" href="{{ path('file') }}">Resources</a></li>
+                <li><a  href="{{ path('mapset') }}"> Maps</a></li>
                 <li><a href="{{ path('user') }}"> Profiles</a></li>
                 <!-- <li><a href="{{ path('sample') }}"> Samples</a></li> -->
             </ul>
