--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -1,4 +1,5 @@
 {% extends 'AppBundle::layout.html.twig' %}
+
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -23,6 +24,9 @@
         });
     </script>
 {% endblock %}
+
+{% block title %}Maps{% endblock %}
+
 {% block body -%}
     <div class="col-sm-offset-1  col-sm-10">
         <h2>{{ entity.name }}</h2>
