--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -70,7 +70,8 @@
 
 
     <div style="margin-top: 70px;">
-        {% if 'default' in app.request.attributes.get('_route') or app.request.attributes.get('_route') == 'theme'   %}
+        {% if 'default' in app.request.attributes.get('_route') or app.request.attributes.get('_route') == 'theme' or 'page' in app.request.attributes.get
+        ('_route')  %}
             {% else %}
             <div class="col-sm-2 sidebar hidden-xs">
                 {% block sidebar %}
