--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -39,6 +39,9 @@
             <li><a href="{{ path('objective_new') }}"> New Objective</a></li>
             <li><a id='file_new_upload' title='Upload Resource' href="{{ path('file_new') }}"><i class="glyphicon glyphicon-upload"></i> Upload
                     Resource</a></li>
+            <li><a id='file_new_upload' title='Upload Resource' href="{{ path('file_new', {'type': 'link'}) }}"><i class="glyphicon glyphicon-link"></i>
+                    Link to
+                    Resource</a></li>
             <li><a title='New Activity' href="{{ path('activity_new') }}">New Activity</a></li>
 
             <li><a href="{{ path('tag_new') }}"> New Label</a></li>
