--- a/src/Sustain/AppBundle/Resources/views/Page/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block body -%}
-    <div class="well col-lg-offset-1 col-sm-10">
+    <div class="col-lg-offset-1 col-sm-10">
         {{ entity.pageBody|raw }}
     </div>
 
