--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -6,23 +6,52 @@
         <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
     </div>
     <div class="col-sm-12" style="padding:30px;">
-        {% for entity in entities %}
-            {% set columns %}{% if entities|length == 2 %}col-sm-6{% elseif entities|length == 3 %}col-sm-4{% elseif entities|length == 4 %}col-sm-3{% elseif
-        entities|length == 5 %}col-sm-offset-1 col-sm-2{% endif %}{% endset %}
 
-            <div class="{{ columns }}">
-                <a href="{{ path('page_show', {id:entity.id}) }}" title="Read more about {{ entity.menuName }} ">
-                    <img src="{{ entity.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ entity.menuName }}">
+
+        <div class="col-sm-4">
+            {% for page in pages %}
+                <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
+                    <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ page.menuName }}">
 
                     <div class="caption">
-                        <h3>{{ entity.teaserImageCaption }}</h3>
-                        <p>{{ entity.teaser|raw }}</p>
+                        <h3>{{ page.teaserImageCaption }}</h3>
+
+                        <p>{{ page.teaser|raw }}</p>
                     </div>
-
-
                 </a>
+            {% endfor %}
+        </div>
+        <div class="col-sm-4">
+            <h3>Introductory Video</h3>
+
+            <div class="embed-responsive embed-responsive-4by3">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/U_XgJwAL3WY?rel=0" allowfullscreen></iframe>
             </div>
-        {% endfor %}
+        </div>
+
+        <div class="col-sm-4">
+            <h3>Watershed UGA Events</h3>
+            {% for event in events %}
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+
+                        {{ event.start|date("l, F d") }} {{ event.start|date("g:i A") }}
+                    </div>
+                    <div class="panel-body">
+                        <h3>{{ event.title }}</h3>
+
+                        <p>{{ event.description|raw }}</p>
+                    </div>
+                </div>
+            {% else %}
+                <div class="panel-body">
+                    <p>There are currently no events. Please check back soon.</p>
+                </div>
+            {% endfor %}
+
+
+        </div>
+
     </div>
 
 {% endblock %}
