Donate on navbar

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,12 +71,13 @@
                 </li>
                 <!--<li id="theme" class=""><a title="Courses" href="{{ path('theme') }}">Getting Started</a></li>-->
                 <li id="event" class=""><a title="Events" href="{{ path('event') }}">Events</a></li>
-                <li id="module"><a href="{{ path('module') }}"> Modules</a></li>
-                <li id="objective"><a href="{{ path('objective') }}"> Objectives</a></li>
-                <li id="activity"><a href="{{ path('activity') }}"> Activities</a></li>
+                <li id="module"><a href="{{ path('module') }}">Modules</a></li>
+                <li id="objective"><a href="{{ path('objective') }}">Objectives</a></li>
+                <li id="activity"><a href="{{ path('activity') }}">Activities</a></li>
                 <li id="file"><a title="Courses" href="{{ path('file') }}">Resources</a></li>
-                <li id="mapset"><a href="{{ path('mapset') }}"> Maps</a></li>
-                <li id="user"><a href="{{ path('user') }}"> Profiles</a></li>
+                <li id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
+                <li id="user"><a href="{{ path('user') }}">Profiles</a></li>
+                <li id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
                 <!-- <li><a href="{{ path('sample') }}"> Samples</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
