moer homepage updates

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,6 +41,7 @@
                 })();
 
                 $('.gsc-input-box').addClass('form-control');
+                $('input').addClass('form-control');
             });
         </script>
         {% endjavascripts %}
@@ -77,7 +78,10 @@
                 <li id="file"><a title="Courses" href="{{ path('file') }}">Resources</a></li>
                 <li id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
                 <li id="user"><a href="{{ path('user') }}">Profiles</a></li>
-                <li id="user"><a href="{{ path('page_show', { 'id': 9 }) }}">Donate</a></li>
+                <li id="user"><a style="margin-top: -5px;" href="{{ path('page_show', { 'id': 9 }) }}"><img style="height: 30px;" src="{{ asset
+                        ('bundles/app/images/donate.png')
+                        }}"
+                                                                                  alt="Donate to Watershed UGA"></a></li>
                 <!-- <li><a href="{{ path('sample') }}"> Samples</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
