--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -2,10 +2,11 @@
 
 {% block body -%}
 
-    <div class="" style="background-color: #82D3EE; margin-top: -20px;margin-left: -15px; margin-right: -15px; padding-right:300px">
-        <img style="max-height: 250px;" src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
+    <div class="" style="background-color: #82D3EE; margin-top: -20px;margin-left: -15px; margin-right: -15px; padding:30px; padding-right:300px;
+    padding-left:0;padding-bottom:0;">
+        <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
     </div>
-    <div class="col-sm-12" style="padding:30px;padding-bottom: 0;">
+    <div class="col-sm-12 well" style="margin-top:20px; padding:30px;background-color: #dedede; ">
         <div class="col-sm-4">
             <strong>What is Watershed UGA?</strong>
             A town & gown initiative to involve UGA campus and Athens community in restoring our streams. We are transforming these streams into a living
@@ -26,7 +27,7 @@
 
 
     </div>
-    <div class="col-sm-12" style="padding:30px;">
+    <div class="col-sm-12 " style="padding:30px;">
 
 
         <div class="col-sm-4">
