--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -78,7 +78,7 @@
                 <li id="file"><a title="Courses" href="{{ path('file') }}">Resources</a></li>
                 <li id="mapset"><a href="{{ path('mapset') }}">Maps</a></li>
                 <li id="user"><a href="{{ path('user') }}">Profiles</a></li>
-                <li id="user"><a style="margin-top: -5px;" href="{{ path('page_show', { 'id': 9 }) }}"><img style="height: 30px;" src="{{ asset
+                <li id="user"><a style="margin: -5px;" href="{{ path('page_show', { 'id': 9 }) }}"><img style="height: 30px;" src="{{ asset
                         ('bundles/app/images/donate.png')
                         }}"
                                                                                   alt="Donate to Watershed UGA"></a></li>
